Wed Aug 21 20:40:20 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/OS.h:
        * ace/OS.i:

          Added wrappers for fgetc, fgetwc, ferror, clearerr, feof,
          ungetc, ungetwc. All these are guaranteed to not be macros.

        * ACEXML/apps/svcconf/Svcconf_Handler.cpp:
        * ACEXML/apps/svcconf/Svcconf_Handler.h:

          Fixed compilation errors.

        * ACEXML/common/FileCharStream.cpp:
        * ACEXML/common/HttpCharStream.cpp:
        * ACEXML/common/XMLFilterImpl.cpp:
        * ACEXML/examples/SAXPrint/Print_Handler.cpp:
        * ACEXML/examples/SAXPrint/SAXPrint_Handler.cpp:
        * ACEXML/examples/SAXPrint/main.cpp:
        * ACEXML/examples/svcconf/Svcconf_Handler.cpp:
        * ACEXML/parser/debug_validator/Debug_Attributes_Builder.cpp:
        * ACEXML/parser/debug_validator/Debug_DTD_Manager.cpp:
        * ACEXML/parser/debug_validator/Debug_Element_Builder.cpp:
        * ACEXML/parser/debug_validator/Element_Tree.cpp:
        * ACEXML/parser/parser/Parser.cpp:

          Use ACE_TEXT instead of ACE_LIB_TEXT. It results in reducing
          vertical space and the wchar.txt document also encourages it.

Wed Aug 21 17:02:44 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/OS_String.cpp: Changed to enabled wchar version of
	  strtok_r_emulation when both ACE_HAS_WCHAR and ACE_LACKS_WCSTOK
	  are both defined (instead of ACE_HAS_REENTRANT_FUNCTIONS.)
	  Thanks to Brian Appel <bappel@integ.com> for reporting this.

Wed Aug 21 12:41:51 2002  Chad Elliott  <elliott_c@ociweb.com>

        * TAO/orbsvcs/tests/AVStreams/Pluggable_Flow_Protocol/receiver.h:
        * TAO/orbsvcs/tests/AVStreams/Pluggable_Flow_Protocol/sender.h:

          Fixed CORBA::Enviroment usage.

        * TAO/orbsvcs/IFR_Service/IFR_Service.mpc:
        * TAO/orbsvcs/LoadBalancer/LoadBalancer.mpc:
        * TAO/orbsvcs/orbsvcs/RTSched.mpc:
        * TAO/orbsvcs/tests/AVStreams/Simple_Two_Stage_With_QoS/AVStreams_Simple_Two_Stage_With_QoS.mpc: